cmake_minimum_required(VERSION 4.0)
project(Chapter3)

set(CMAKE_CXX_STANDARD 14)

add_executable(Chapter3
        tes.cpp
        Listing3.1/limits.cpp
        Listing3.1/limits.cpp
        Listing3.1/limits.cpp
        Listing3.1/limits.cpp
        Listing3.1/limits.cpp
        Listing3.2/exceed.cpp
        Listing3.2/exceed.cpp
        Listing3.3/hexoct1.cpp
        Listing3.4/hexoct2.cpp)
